# zedit

./: Cargo.toml  README.md  build.rs  es_hola.zl  test.py  zedit-terminal.md  zedit.1
docs/: editor-plan-2.md  editor-plan-3.md  editor-plan-4.md  editor-plan-5.md  editor-plan.md  en_zedit.md  es_zedit.md  zhelly-concept.md
grammars/: languages.json  minilux.tmLanguage.json  rust.tmLanguage.json  yaml.tmLanguage.json  zenith.tmLanguage.json  zymbol.tmLanguage.json
src/: buffer.rs  clipboard.rs  config.rs  cursor.rs  debug_log.rs  diff_view.rs  extension.rs  filetree.rs  git.rs  glob.rs  input.rs  keybindings.rs  layout.rs  main.rs  mmap.rs  oklab.rs  problem_panel.rs  pty.rs  render.rs  session.rs  simd.rs  swap.rs  terminal.rs  undo.rs  unicode.rs  vmem.rs  vsix_import.rs  vterm.rs
src/editor/: buffer_state.rs  completion.rs  diff_integration.rs  editing.rs  filetree_integration.rs  helpers.rs  hover.rs  minimap.rs  mod.rs  palette.rs  prompt.rs  search.rs  selection.rs  tasks.rs  tests.rs  view.rs  wrap.rs
src/lsp/: client.rs  mod.rs  protocol.rs  transport.rs
src/plugin/: api.rs  bridge.rs  mod.rs
src/syntax/: grammar.rs  highlight.rs  json_parser.rs  mod.rs  regex.rs  theme.rs  tokenizer.rs
themes/: zedit-dark.json  zedit-light.json
